# InventoryMGR

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  ACCEPTED_RISKS.md  AGENTS.md  CLAUDE.md  DESIGN.md  DESIGN_CHANGES_SUMMARY.md  LICENSE  PRODUCT.md  README.md  create-placeholders.sh  design-verification.md  devbox.json  docker-compose.e2e-db.yml  docker-compose.e2e.yml  docker-compose.yml  ecc-install.json  ecosystem.config.example.js  ecosystem.config.js  evaluate-inventory-final.js  evaluate-inventory-simple.js  evaluate-inventory.mjs  evaluate-inventory.ts  evaluate_inventory.js  evaluation_results.json  final-evaluation-result.json  justfile  run-eval.sh  run-with-modules.js  test-browser-eval.js  test-eval.html  test_inventory_evaluation.js  test_with_curl.sh
backend/: Dockerfile  alembic.ini  ecosystem.config.js  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_settings_and_sr_id.py  0003_os_family_and_backup.py  (+13 more)
backend/app/: main.py
backend/sample_data/: inventory_sample.csv
backend/tests/: conftest.py  test_app_settings.py  test_auth_rbac_clusters.py  test_auth_rbac_storage.py  test_auth_rbac_vms.py  test_cluster_api.py  test_cluster_models.py  test_cluster_schemas.py  test_cluster_service.py  test_csv_imports.py  test_db_session.py  test_mempalace.py  test_notifications.py  test_notifier_models.py  test_preferences.py  test_settings.py  test_storage_api.py  test_storage_models.py  test_storage_usage.py  test_vm_filters.py  test_vm_networks.py  test_vm_type_lifecycle.py
(+558 files in other folders)
