[project]
name = "inventorymgr-api"
version = "0.1.0"
description = "InventoryMGR FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2",
  "alembic",
  "psycopg[binary]",
  "pydantic-settings>=2.14.2",
  "PyJWT",
  "pwdlib[argon2]",
  "python-multipart",
  "email-validator",
  "slowapi>=0.1.10",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
strict = false
